made code more modular

--- a/extensions/value-list/locales/de.schema.json
+++ b/extensions/value-list/locales/de.schema.json
@@ -1,7 +1,7 @@
 {
     "blocks": {
       "value-bullets": {
-        "name": "Feature Icons",
+        "png-name": "Feature Icons",
         "paragraph-1": {
           "content": "In diesen Abschnitt können 1-5 Stichpunkte mit optionalen Iconen angezeigt werden. "
         },
