--- a/web/frontend/locales/en.json
+++ b/web/frontend/locales/en.json
@@ -139,6 +139,12 @@
       "description": "This video will walk you through how to install and configure this app",
       "buttonText": "Watch video",
       "modalTitle": "How to install and configure this app"
+    },
+    "ConditionalSetupBannerSection": {
+      "title": "Learn how to set up this app",
+      "description": "We've prepared a step-by-step guide to help you set up icons and value propositions in your theme. <br /> You can find it in the \"Setup Guide\" section of this app.",
+      "primaryButtonText": "Visit the setup guide",
+      "secondaryButtonText": "Don't show this again"
     }
   },
   "SettingsGuideCard": {
