fixed bugs from introducing svg

--- a/extensions/value-list/locales/en.default.schema.json
+++ b/extensions/value-list/locales/en.default.schema.json
@@ -1,7 +1,7 @@
 {
   "blocks": {
     "value-bullets": {
-      "png-name": "Value icons",
+      "png-name": "PNG Value icons",
       "svg-name": "SVG Value icons",
         "paragraph-1": {
           "content": "Use this section to display 1-5 value propositions with optional icons. You can also add a background to this section."
