--- a/web/frontend/locales/en.json
+++ b/web/frontend/locales/en.json
@@ -141,7 +141,7 @@
       "modalTitle": "How to install and configure this app"
     },
     "ConditionalSetupBannerSection": {
-      "title": "Learn how to set up this app",
+      "title": "App successfully installed, learn how to set it up",
       "description": "We've prepared a step-by-step guide to help you set up icons and value propositions in your theme. <br /> You can find it in the \"Setup guide\" section of this app.",
       "primaryButtonText": "Visit the setup guide",
       "secondaryButtonText": "Don't show this again"
